--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <!-- Sección de Ventas al Contado -->
             <section class="section">
-    <h2>💰 Registrar Comprobante de Venta</h2>
+    <h2>💰 Registro de Venta</h2>
     <div class="card">
         <form id="ventaForm" class="form">
             <!-- Fila 1: Información básica -->
