--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="card">
                     <div class="form-group">
                         <label for="codigoCuenta">Código de Cuenta:</label>
-                        <input type="text" id="codigoCuenta" placeholder="Ej: 1011">
+                        <input type="text" id="codigoCuenta" placeholder="Ej: 101, 121, 701">
                         <button onclick="consultarLibroMayor()" class="btn btn-info">
                             📚 Libro Mayor
                         </button>
